adds js to site and fixes functionality with lightbox. still needs styles

--- a/themes/cjmedia/sass/style.scss
+++ b/themes/cjmedia/sass/style.scss
@@ -48,6 +48,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css");
 // Import hamburger menu effects
 @import url("https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css");
+@import url("https://sorgalla.com/lity/dist/lity.css");
+
+
 
 // Imported but not included in the stylesheet.
 
