adds loop to grab project images and video links. lightbox is finally working but needs to be styled...again.

--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -44,6 +44,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 --------------------------------------------------------------*/
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css");
+@import url("https://sorgalla.com/lity/dist/lity.css");
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
