--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -194,11 +194,18 @@
 }
 
 .showcase-type {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
+    width: 95%;
+    margin: 0 auto;
+
+     @include tablet {
+        width: 80%;
+
+        }
+    
     a {
         text-decoration: none;
         color: #404040;
@@ -207,19 +214,28 @@
 }
 
 .showcase-container {
-    display: flex;
+    display: flex; 
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    align-items: center; 
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 90vw;
     height: 30vh;
     border-radius: 5px;
     margin: 1em;
+    
+
+    @include tablet {
+        width: 350px;
+        height: 200px; 
+        margin-left: 1rem;
+        margin-right: 1rem;
     &:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         color:#DD7D74;
       }
+    }
 }
 
 .cat-title {
@@ -247,56 +263,28 @@
     }
 }
 
-.showcase-categories {
-    display: flex;
-    justify-content: center;
-    flex-flow: wrap;
-    margin: 1.7em;
 
-    @include tablet {
-        padding: 2em 0em 2em 0em;
-        width: 70%;
-        margin: 0 auto;
-    }
-
-    a {
-        padding: .5rem .7rem;
-        text-decoration: none;
-        color: #404040;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 1em;
-        
-          @include tablet {
-            margin: 2em;
-
-            &:hover {
-            //    color:#DD7D74;
-               text-shadow: 1px 1px 5px #a09f9f;
-              }
-        }
-    }
-
-    .circle {
-        width: 3em;
-        height: 3em;
-        background-color: #EBB67A;
-        border-radius: 50%;
-        position: absolute;
-        z-index: -2;
-    }
-}
-
-.video-embed {
+.projects {
     display: flex; 
     justify-content: center;
     align-items: center;
 
-    .wp-video-popup {
+
+    .vid-thumbnail {
         display: flex; 
         justify-content: center;
-        align-items: center;  
+        align-items: center; 
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        width: 90vw;
+        height: 200px; 
+
+        @include tablet {
+            width: 350px;
+            height: 200px; 
+            margin-left: 1rem;
+            margin-right: 1rem;
+        }
     }
 
    .fa-play {
@@ -305,11 +293,6 @@
        color: white;
        font-size: 3em;
        text-align: center;
-   }
-
-   img {
-    width: 100%;
-    height: auto; 
    }
 }
 
