--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -29,11 +29,7 @@
     @include tablet {
         justify-content: start;
         margin-left: 3rem;
-        height: 70vw;
-    }
-
-    @include desktop {
-        height: 50vw;
+        height: 55vh;
     }
 }
 
@@ -45,6 +41,7 @@
     @include tablet {
         height: 38rem;
         width: 30rem;
+        margin-top: 5rem;
     }
 }
 
