--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -701,10 +701,7 @@ object {
           -ms-flex-pack: start;
               justify-content: start;
       margin-left: 3rem;
-      height: 70vw; } }
-  @media screen and (min-width: 1080px) {
-    .container-logo {
-      height: 50vw; } }
+      height: 55vh; } }
 
 .front-logo {
   height: 28rem;
@@ -714,7 +711,8 @@ object {
   @media screen and (min-width: 768px) {
     .front-logo {
       height: 38rem;
-      width: 30rem; } }
+      width: 30rem;
+      margin-top: 5rem; } }
 
 .front-img-flex-box {
   display: -webkit-box;
