--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -11,17 +11,6 @@
     align-self: center;
 }
 
-.site-title-heading {
-    text-align: right;
-    text-transform: uppercase;
-    font-size: 3.625rem;
-    
-    .site-title-heading-2 {
-        font-family: $font__main;
-        font-size: 1.5rem;
-    }
-}
-
 .container-logo {
     display: flex;
     justify-content: center;
@@ -100,6 +89,7 @@
 /* About  page */
 
 .site-main-about {
+
     .entry-title {
         display: none;
     }
@@ -107,6 +97,16 @@
      font-size: 1.875rem;   
      text-transform: none;
      padding: 3rem 1.5rem;
+    }
+}
+
+.site-title-heading {
+    text-align: right;
+    text-transform: uppercase;
+    font-size: 3.625rem;
+    @include tablet {
+        width: 70vw;
+        margin: 0 auto;
     }
 }
 
@@ -119,6 +119,10 @@
     margin: 0 auto;
     padding-bottom: 4rem;
     position: relative;
+    @include tablet {
+        width: 70vw;
+        grid-template-rows: 16rem 30rem 11rem 11rem 28rem 11rem;
+    }
 
     .image-1 {
         grid-column: 1 / 3;
@@ -135,6 +139,9 @@
         top: -15px;
 	    left: -30px;
         z-index: -1;
+           @include tablet {
+            left: -15px;
+            }
     }
 
     .content {
@@ -143,6 +150,7 @@
 
         p {
             font-weight: 300;
+            line-height: 1.5;
         }
     }
 
@@ -186,6 +194,9 @@
         top: 0px;
 	    left: -30px;
         z-index: -1;
+        @include tablet {
+            left: -16px;
+            }
     }
 
     .image-5 {
