--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -772,6 +772,11 @@ object {
 /* About  page */
 .site-main-about .entry-title {
   display: none; }
+  @media screen and (min-width: 1080px) {
+    .site-main-about .entry-title {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
 
 .site-main-about h1 {
   font-size: 1.875rem;
@@ -861,6 +866,15 @@ object {
     grid-column: 1 / 3;
     grid-row: 6 / 7;
     margin-top: 1rem; }
+  .about-grid .image-5-top {
+    display: none; }
+    @media screen and (min-width: 1080px) {
+      .about-grid .image-5-top {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        width: 13rem;
+        height: 22rem; } }
 
 /* Showcase Category Archive Page */
 .showcase-header {
