--- a/themes/cjmedia/sass/_footer.scss
+++ b/themes/cjmedia/sass/_footer.scss
@@ -20,15 +20,24 @@
             flex-direction: row;
             padding-inline-start: 0px;
             margin: 0rem; 
-            font-size: 2.813rem;
+            font-size: 2rem;
             list-style: none;
 
             i {
-                padding: 1rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background:#4D8AA0;;
+                height: 60px;
+                width: 60px;
+                border-radius: 50px;
+                margin-bottom: 10px;
+                margin: 10px;
             }
 
             a {
-                color: #4D8AA0
+                color: white;
+                text-decoration: none;
             }
 
         }
@@ -36,12 +45,14 @@
 
     .cta-button {
         background: #3C549E;
-        padding: 1rem 5rem;
         border-radius: 27px;
         margin: 0 auto;
         text-decoration: none;
         text-transform: uppercase;
         color: white;
-        letter-spacing: 3px;
+        letter-spacing: 2px;
+        padding: .7rem 2rem;
+        font-family: $font__secondary;
+        font-size: 1.2em;
     }
 }
