reduces size of contact button on hamburger menu

--- a/themes/cjmedia/sass/_header.scss
+++ b/themes/cjmedia/sass/_header.scss
@@ -86,8 +86,8 @@
 		font-size: 1.2em;
 		letter-spacing: 1px;
 	    &:last-child > a {
-		background: #3C549E;
-		padding: 1rem 5rem;
+		background: hsl(225, 45%, 43%);
+		padding: .8rem 2rem;
 		border-radius: 27px;
 		color: white;
 		letter-spacing: 2px;
