--- a/themes/cjmedia/sass/_footer.scss
+++ b/themes/cjmedia/sass/_footer.scss
@@ -54,5 +54,8 @@
         padding: .7rem 2rem;
         font-family: $font__secondary;
         font-size: 1.2em;
+        &:hover {
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     }
+}
 }
