--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -330,6 +330,10 @@
             height: 200px; 
             margin-left: 1rem;
             margin-right: 1rem;
+            &:hover {
+                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+               
+              }
         }
     }
 
