changes grid layout on about page at desktop

--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -98,10 +98,12 @@
 .site-main-contact {
     margin: 10em 2em 2em 2em;
 }
+
+
 /* About  page */
 
 .site-main-about {
-
+    padding-top: 5em;
 
     .entry-title {
         display: none;
@@ -109,7 +111,7 @@
             display: flex;
         }
     }
-    h1 {
+    h3 {
      font-size: 1.875rem;   
      text-transform: none;
      padding: 3rem 1.5rem;
@@ -123,12 +125,16 @@
 }
 
 .site-title-heading {
+    font-family: $font__secondary;
     text-align: right;
-    text-transform: uppercase;
-    font-size: 3.625rem;
+    font-size: 2em;
+    width: 90vw;
+    margin: 0 auto;
+    padding: 1em 0em 1em 0em;
     @include tablet {
         width: 70vw;
         margin: 0 auto;
+        padding: 2em 0em 2em 0em;
     }
 }
 
@@ -139,16 +145,23 @@
     grid-template-rows: 11rem auto 11rem 11rem 22rem 11rem;
     width: 90vw;
     margin: 0 auto;
-    padding-bottom: 4rem;
     position: relative;
     @include tablet {
         width: 70vw;
         grid-template-rows: 16rem auto 11rem 11rem 28rem 15rem;
     }
+    @include desktop {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 16rem auto;
+    }
 
     .image-1 {
         grid-column: 1 / 3;
         grid-row: 1 / 2;
+        @include desktop {
+            grid-column: 1 / 3;
+            grid-row: 1 / 2; 
+        }
     }
 
     .image-1-blue-box {
@@ -169,6 +182,10 @@
     .content {
         grid-column: 1 / 3; 
         grid-row: 2 / 3;
+        @include desktop {
+            grid-column: 3 / 5; 
+            grid-row: 2 / 3;
+         }
 
         p {
             font-weight: 300;
@@ -180,12 +197,20 @@
         grid-column: 1 / 2;
         grid-row: 3 / 5;
         margin: 0rem 1rem 1rem 0rem;
+        @include desktop {
+           display: none;
+        }
     }
 
     .image-3 {
         grid-column: 2 / 3;
         grid-row: 3 / 5;
         margin: 0rem 0rem 1rem 1rem;
+        @include desktop {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3; 
+            margin: 0rem 0rem 0rem 0rem;
+        }
     }
 
     .image-1-red-box {
@@ -198,12 +223,22 @@
         top: -15px;
 	    left: 0px;
         z-index: -1;
+        @include desktop {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3; 
+            left: -15px;
+        }
     }
 
     .image-4 {
         grid-column: 1 / 3;
         grid-row: 5 / 6;
         margin: 1rem 0rem;
+        @include desktop {
+            grid-column: 2 / 3;
+            grid-row: 2 / 3; 
+            margin: 0rem 0rem;
+        }
     }
 
     .image-1-orange-box {
@@ -219,12 +254,19 @@
         @include tablet {
             left: -16px;
             }
+        @include desktop {
+            display: none;
+        }
     }
 
     .image-5 {
         grid-column: 1 / 3;
         grid-row: 6 / 7;
-        margin-top: 1rem;
+        @include desktop {
+            grid-column: 3 / 5;
+            grid-row: 1 / 2; 
+            margin-top: 0rem;
+        }
     }
 }
 
