--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -780,35 +780,39 @@ object {
   margin: 10em 2em 2em 2em; }
 
 /* About  page */
-.site-main-about .entry-title {
-  display: none; }
-  @media screen and (min-width: 1080px) {
-    .site-main-about .entry-title {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex; } }
-
-.site-main-about h1 {
-  font-size: 1.875rem;
-  text-transform: none;
-  padding: 3rem 1.5rem; }
-
-.site-main-about .site-title {
-  display: none; }
-  @media screen and (min-width: 1080px) {
-    .site-main-about .site-title {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex; } }
+.site-main-about {
+  padding-top: 5em; }
+  .site-main-about .entry-title {
+    display: none; }
+    @media screen and (min-width: 1080px) {
+      .site-main-about .entry-title {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; } }
+  .site-main-about h3 {
+    font-size: 1.875rem;
+    text-transform: none;
+    padding: 3rem 1.5rem; }
+  .site-main-about .site-title {
+    display: none; }
+    @media screen and (min-width: 1080px) {
+      .site-main-about .site-title {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; } }
 
 .site-title-heading {
+  font-family: "Poppins", sans-serif;
   text-align: right;
-  text-transform: uppercase;
-  font-size: 3.625rem; }
+  font-size: 2em;
+  width: 90vw;
+  margin: 0 auto;
+  padding: 1em 0em 1em 0em; }
   @media screen and (min-width: 650px) {
     .site-title-heading {
       width: 70vw;
-      margin: 0 auto; } }
+      margin: 0 auto;
+      padding: 2em 0em 2em 0em; } }
 
 .about-grid {
   display: grid;
@@ -817,15 +821,22 @@ object {
   grid-template-rows: 11rem auto 11rem 11rem 22rem 11rem;
   width: 90vw;
   margin: 0 auto;
-  padding-bottom: 4rem;
   position: relative; }
   @media screen and (min-width: 650px) {
     .about-grid {
       width: 70vw;
       grid-template-rows: 16rem auto 11rem 11rem 28rem 15rem; } }
+  @media screen and (min-width: 1080px) {
+    .about-grid {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: 16rem auto; } }
   .about-grid .image-1 {
     grid-column: 1 / 3;
     grid-row: 1 / 2; }
+    @media screen and (min-width: 1080px) {
+      .about-grid .image-1 {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2; } }
   .about-grid .image-1-blue-box {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -842,6 +853,10 @@ object {
   .about-grid .content {
     grid-column: 1 / 3;
     grid-row: 2 / 3; }
+    @media screen and (min-width: 1080px) {
+      .about-grid .content {
+        grid-column: 3 / 5;
+        grid-row: 2 / 3; } }
     .about-grid .content p {
       font-weight: 300;
       line-height: 1.5; }
@@ -849,10 +864,18 @@ object {
     grid-column: 1 / 2;
     grid-row: 3 / 5;
     margin: 0rem 1rem 1rem 0rem; }
+    @media screen and (min-width: 1080px) {
+      .about-grid .image-2 {
+        display: none; } }
   .about-grid .image-3 {
     grid-column: 2 / 3;
     grid-row: 3 / 5;
     margin: 0rem 0rem 1rem 1rem; }
+    @media screen and (min-width: 1080px) {
+      .about-grid .image-3 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        margin: 0rem 0rem 0rem 0rem; } }
   .about-grid .image-1-red-box {
     grid-column: 2 / 3;
     grid-row: 3 / 5;
@@ -863,10 +886,20 @@ object {
     top: -15px;
     left: 0px;
     z-index: -1; }
+    @media screen and (min-width: 1080px) {
+      .about-grid .image-1-red-box {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        left: -15px; } }
   .about-grid .image-4 {
     grid-column: 1 / 3;
     grid-row: 5 / 6;
     margin: 1rem 0rem; }
+    @media screen and (min-width: 1080px) {
+      .about-grid .image-4 {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        margin: 0rem 0rem; } }
   .about-grid .image-1-orange-box {
     grid-column: 1 / 3;
     grid-row: 5 / 6;
@@ -880,10 +913,17 @@ object {
     @media screen and (min-width: 650px) {
       .about-grid .image-1-orange-box {
         left: -16px; } }
+    @media screen and (min-width: 1080px) {
+      .about-grid .image-1-orange-box {
+        display: none; } }
   .about-grid .image-5 {
     grid-column: 1 / 3;
-    grid-row: 6 / 7;
-    margin-top: 1rem; }
+    grid-row: 6 / 7; }
+    @media screen and (min-width: 1080px) {
+      .about-grid .image-5 {
+        grid-column: 3 / 5;
+        grid-row: 1 / 2;
+        margin-top: 0rem; } }
 
 /* Showcase Category Archive Page */
 .showcase-header {
